Corrects horizontal scroll issues

--- a/src/_css/theme/layout.pcss
+++ b/src/_css/theme/layout.pcss
@@ -15,6 +15,7 @@
 }
 
 .coop-l-content {
+  display: inline-flex;
   flex-direction: row;
   min-height: 100vh;
 }
@@ -30,22 +31,14 @@
 }
 
 .coop-u-flex__main {
-  /* display: flex;
-  width: 100%;
-  justify-content: left;
-  flex-flow: column nowrap;
-  justify-content: left;
-  align-items: center;
-  background: var(--color-white);
-  flex: 1 1 auto; */
   display: flex;
-  /* width: 100%; */
   flex-flow: column nowrap;
   justify-content: left;
   align-items: center;
   background: #fff;
   background: var(--color-white);
   flex: 1;
+  margin-left: var(--spacing-32);
 }
 
 .coop-l-page,
